# xontrib-brace-expansion

./: LICENSE  README.rst  pyproject.toml  ship
xontrib/: brace_expansion.py
