[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xontrib-brace-expansion"
version = "1.0.0"
description = "Implements brace expansion in xonsh."
authors = ["Ryan Delaney <ryan.patrick.delaney+pypi@proton.me>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/rpdelaney/xontrib-brace-expansion"
homepage = "https://pypi.org/project/xontrib-brace-expansion"
packages = [
  { include = "xontrib" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Shell",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
